syntax = "proto3";
option go_package = "github.com/jdxj/cyber-wagon/identity";

service Identity {
  rpc UniqueID(UniqueIDReq) returns (UniqueIDRsp);
  rpc IncrementID(IncrementIDReq) returns (IncrementIDRsp);
}

message UniqueIDReq {
  int64 quantity = 1;
}

message UniqueIDRsp {
  repeated uint64 ids = 1;
}

message IncrementIDReq {
  uint64 namespace = 1;
  int64 quantity = 2;
}

message IncrementIDRsp {
  uint64 max_id = 1;
}